plugins {
	id 'org.springframework.boot' version '2.6.7'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id "org.asciidoctor.jvm.convert" version "3.3.2"
	id 'java'
	id 'jacoco'
}

group = 'com.hoppy'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'mysql:mysql-connector-java'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'junit:junit'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	implementation 'software.amazon.awssdk:s3:2.17.217'
	testImplementation 'software.amazon.awssdk:s3:2.17.217'

	runtimeOnly 'com.h2database:h2'
	testRuntimeOnly 'com.h2database:h2'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

jacoco {
	toolVersion = "0.8.8"
	reportsDirectory = file('build/customJacocoReportDir')
}

ext {
	snippetsDir = file('build/generated-snippets')
}

test {
	outputs.dir snippetsDir
	useJUnitPlatform()
}

jacocoTestReport {
	dependsOn 'test'
	reports {
		xml.required = false
		csv.required = false
		html.outputLocation = file('build/jacocoHtml')
	}
}

task beforeAsciidoctor(type: Delete) {
	dependsOn 'jacocoTestReport'
	delete ('src/main/resources/static/docs/api-docs.html')
}

asciidoctor {
	dependsOn 'beforeAsciidoctor'
	sourceDir 'src/docs/asciidoc'
	attributes 'snippets': snippetsDir
	inputs.dir snippetsDir
}

task copyDocument(type: Copy) {
	dependsOn 'asciidoctor'
	from ('build/docs/asciidoc/api-docs.html')
	into ('src/main/resources/static/docs')
}

build {
	dependsOn 'copyDocument'
}